Decimal value for initial-letter is not accepted https://bugs.webkit.org/show_bug.cgi?id=296785 <rdar://problem/157808105>

Reviewed by Antti Koivisto.

Let's add support for non-integral initial letter sizes.
(IFC can already handle non-integral values by using InlineLayoutUnit as type)

* LayoutTests/fast/text/non-integral-initial-letter-simple-expected.html: Added.
* LayoutTests/fast/text/non-integral-initial-letter-simple.html: Added.
* Source/WebCore/rendering/style/RenderStyle.h:
* Source/WebCore/rendering/style/RenderStyleInlines.h:
(WebCore::RenderStyle::initialInitialLetter):
(WebCore::RenderStyle::initialLetter const):
(WebCore::RenderStyle::initialLetterDrop const):
(WebCore::RenderStyle::initialLetterHeight const):
* Source/WebCore/rendering/style/RenderStyleSetters.h:
(WebCore::RenderStyle::setInitialLetter):
* Source/WebCore/rendering/style/StyleRareNonInheritedData.h:
* Source/WebCore/style/StyleBuilderConverter.h:
(WebCore::Style::BuilderConverter::convertInitialLetter):
* Source/WebCore/style/StyleExtractorConverter.h:
(WebCore::Style::ExtractorConverter::convertInitialLetter):
* Source/WebCore/style/StyleExtractorSerializer.h:
(WebCore::Style::ExtractorSerializer::serializeInitialLetter):

Canonical link: https://commits.webkit.org/298564@main